19-Aug-2016 Fixes #108. Xcode's EXCLUDED_SOURCE_FILE_NAME list appears to be satisfied with just leafnames. This of course does assume that there are no duplicate leafnames in different directories in the source.

18-Aug-2016 Issue #14. VisualStudio projects now have the majority of paths written as relative to the project file, where appropriate. Some paths that have yet to be converted are those in pre and post build commands.

12-Aug-2016 Fixes #284. If there were very sparsely distributed rank indices as mentioned below, the progress updates would stall during module dependency analysis. The stall has been removed, but there was unmetered progress that is now fixed.

12-Aug-2016 Fixes #284. The dependency sorting algorithm introduced in v1.0.2 (issue #236), although faster, introduced an ordered list of (module,rankindex) pairs where the rank indices may be sparsely distributed. This resulted in a structure on the dependency graph that could have empty collections of Modules. Thus, although the order of modules is correct to satisfy dependencies, redundant processing was occurring on those empty ranks. This change filters out any gaps between rank indices in the data, so that there are no empty Module collections, and final rank indices are contiguous, so there is no wasted processing during dependency graph evaluation.

12-Aug-2016 Fixes #283. VisualStudio projects now honour header files in specific configurations.

11-Aug-2016 Fixes #282. Dependencies on VisualStudio projects that are specific to a configuration are now honoured in the .vcxproj and .sln files. Note that this is breaking change in the API for VSSolutionBuilder.VSProject. Dependent projects must now be made dependent on the project configuration, not just the project.

02-Aug-2016 ======== Version 1.0.3 Release ========

26-Jul-2016 Fixes #257. If a shared object symlink is missing, an incremental build will regenerate it.

12-Jul-2016 ======== Version 1.0.3 beta 3 Release ========
